[tool.poetry]
name = "python-mpesa-sdk"
version = "0.1.0"
description = "Python SDK for Safaricom's Daraja API"
authors = ["mango-habanero <main@mango-habanero.dev>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "mpesa_sdk"}]
include = ["pyproject.toml", "LICENSE.md", "README.md", "CHANGELOG.md"]
repository = "https://github.com/PhilipWafula/python-mpesa-sdk"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
maintainers = ["mango-habanero <main@mango-habanero.dev>"]
keywords = ["mpesa", "sdk", "daraja", "python"]

[tool.semantic_release]
branch = "main"
build_command = "poetry build"
changelog_file = "CHANGELOG.md"
dist_path = "dist/"
patch_without_tag = true
remove_dist = false
upload_to_pypi = false
upload_to_release = true
version_variable = "pyproject.toml:version"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "2023.3"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "7.0.1"
pytest-cov = "4.1.0"
python-dotenv = "^1.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
tox = "^4.6.0"
pylint = "^2.17.4"
pytest-sugar = "^0.9.7"
python-semantic-release = "^7.34.4"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
